# bad-ideas

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
call-builder-sim/: Cargo.toml  DESIGN.md  IMPLEMENTATION-NOTES.md  README.md
call-builder-sim/src/: call_builder.rs  fake_wasmtime.rs  lib.rs  main.rs
crates/baseline/: Cargo.toml
crates/baseline/src/: main.rs
crates/batched-wasm/: Cargo.toml
crates/batched-wasm/src/: main.rs
crates/bulk-wasm/: Cargo.toml
crates/bulk-wasm/src/: main.rs
crates/naive-wasm/: Cargo.toml
crates/naive-wasm/src/: main.rs
crates/scenario/: Cargo.toml
crates/scenario/src/: lib.rs
crates/stream-wasm/: Cargo.toml
crates/stream-wasm/src/: main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
guests/bulk-wasm-guest/: Cargo.toml
guests/bulk-wasm-guest/src/: lib.rs
guests/bulk-wasm-guest/wit/: world.wit
guests/naive-wasm-guest/: Cargo.toml
guests/naive-wasm-guest/src/: lib.rs
guests/naive-wasm-guest/wit/: world.wit
guests/stream-wasm-guest/: Cargo.toml
guests/stream-wasm-guest/src/: lib.rs
guests/stream-wasm-guest/wit/: world.wit
results/: baseline.json  batched-wasm-10.json  batched-wasm-100.json  batched-wasm-1000.json  batched-wasm-10000.json  bulk-wasm.json  naive-wasm.json  stream-wasm.json
scripts/: bench.sh
